# scalable-cli

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  cli_ux_feedback.yml  config.yml  feature_request.yml
src/: active_session.rs  auth.rs  broker_commands.rs  broker_context.rs  broker_projections.rs  broker_projections_tests.rs  broker_queries.rs  broker_queries_tests.rs  broker_query_execution.rs  broker_shared.rs  channel.rs  cli.rs  command_handlers.rs  config.rs  graphql.rs  helpers.rs  installation_code.rs  lib.rs  machine.rs  main.rs  overnight_commands.rs  overnight_projections.rs  overnight_projections_tests.rs  overnight_queries.rs  overnight_queries_tests.rs  overnight_query_execution.rs  overnight_shared.rs  session.rs  session_refresh.rs  session_refresh_tests.rs  token.rs  token_verifier.rs  trade.rs  trade_attempt.rs  trade_confirmation.rs  trade_controls.rs  trade_execution.rs  trade_presentation.rs  transport_security.rs
src/dpop/: mod.rs  pkcs11.rs  secure_enclave.rs  software.rs
src/session/: keyring_provider.rs
tests/: broker_cli.rs  installation_code_cli.rs  json_mode.rs  overnight_cli.rs  version.rs
