[package]
name = "scalable-cli"
version = "0.3.0"
edition = "2024"
rust-version = "1.95"

[[bin]]
name = "sc"
path = "src/main.rs"

[features]
channel-prod = []

[build-dependencies]
toml = "1.0"

[profile.release]
strip = "symbols"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
keyring = { version = "3.6", features = ["apple-native", "windows-native", "sync-secret-service", "vendored"] }
p256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "form", "json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
tempfile = "3.14"
toml = "1.0"
url = "2.5"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
security-framework = { version = "3.7", features = ["OSX_10_15"] }
security-framework-sys = "2.17"

[target.'cfg(target_os = "linux")'.dependencies]
cryptoki = "0.12"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
mockito = "1.6"
graphql-parser = "0.4"
